# learn-opengl

./: .gitignore  CMakeLists.txt  main.cpp  shader.fs  shader.vs  shader_s.cpp  shader_s.h  test
glad/: glad.c  glad.h
